Chaged the height and width of the images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>Project 1 - Resume</p>
         <hr>
         <a href="https://rach-18.github.io/very-basic-resume/">
-            <img src="Project 1.png">
+            <img width="100%" height="150px" src="Project 1.png">
         </a>
         <hr>
     </div>
@@ -19,7 +19,7 @@
         <p>Project 2 - Photo Cat App</p>
         <hr>
         <a href="https://rach-18.github.io/Cat-Photo-App/">
-            <img src="Project 2.png">
+            <img width="100%" height="150px" src="Project 2.png">
         </a>
         <hr>
     </div>
@@ -28,7 +28,7 @@
         <p>Project 3 - Form</p>
         <hr>
         <a href="https://rach-18.github.io/form/">
-            <img src="Project 3.png">
+            <img width="100%" height="150px" src="Project 3.png">
         </a>
         <hr>
     </div>
@@ -37,7 +37,7 @@
         <p>Project 4 - Tribute Page</p>
         <hr>
         <a href="https://rach-18.github.io/tribute/">
-            <img src="Project 4.png">
+            <img width="100%" height="150px" src="Project 4.png">
         </a>
         <hr>
     </div>
